5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1596_842.log
== TEST (2019-03-26 18:31:40) 
-- CODE:
resto=15%4
divisao inteira=20//5
print(soma dos digitos=15+4+20+5)

-- ERROR:
File "XXXX", line 2
    divisao inteira=20//5
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:31:49) 
-- CODE:
resto=15%4
divisao =20//5
print(soma dos digitos=15+4+20+5)

-- ERROR:
File "XXXX", line 3
    print(soma dos digitos=15+4+20+5)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:31:54) 
-- CODE:
resto=15%4
divisao =20//5
print(soma dos digitos=15+4+20+5)

-- EXECUTION TIME:
0.107266
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 3
    print(soma dos digitos=15+4+20+5)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:32:05) 
-- CODE:
resto=15%4
divisao =20//5
print(soma=15+4+20+5)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(soma=15+4+20+5)
TypeError: 'soma' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:32:36) 
-- CODE:
resto=15%4
divisao =20//5
total= 15+4+20+5
print(total)

-- OUTPUT:
44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:32:38) 
-- CODE:
resto=15%4
divisao =20//5
total= 15+4+20+5
print(total)

-- EXECUTION TIME:
0.224461
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
44
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:33:12) 
-- CODE:
resto=3%1
divisao=4//1
total= 3+1+4+1
print(total)

-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:33:14) 
-- CODE:
resto=3%1
divisao=4//1
total= 3+1+4+1
print(total)

-- EXECUTION TIME:
0.163927
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
9
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:33:48) 
-- CODE:
resto=3%1
divisao=4//1
total= 3+1+4+1
print(total)

-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:33:51) 
-- CODE:
resto=3%1
divisao=4//1
total= 3+1+4+1
print(total)

-- EXECUTION TIME:
0.16736
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
9
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:59:16) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//100
print(primeiro_digito)
print(soma_dos_digitos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(soma_dos_digitos)
NameError: name 'soma_dos_digitos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:00:17) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//100
print(primeiro_digito)
soma_dos_digitos=primeiro_digito+seg_dig+ter_dig+q_dig
print(soma_dos_digitos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma_dos_digitos=primeiro_digito+seg_dig+ter_dig+q_dig
NameError: name 'seg_dig' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:00:38) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//100
print(primeiro_digito)
soma_dos_digitos=primeiro_digito+seg_dig+ter_dig+q_dig
print(soma_dos_digitos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma_dos_digitos=primeiro_digito+seg_dig+ter_dig+q_dig
NameError: name 'seg_dig' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:00:59) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//100
print(primeiro_digito)
soma_dos_digitos=primeiro_digito+seg_dig+ter_dig
print(soma_dos_digitos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma_dos_digitos=primeiro_digito+seg_dig+ter_dig
NameError: name 'seg_dig' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:01:36) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//100
print(primeiro_digito)
soma_dos_digitos= entrada+100
print(soma_dos_digitos)

-- OUTPUT:
91
9273
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:01:45) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//100
print(primeiro_digito)
soma_dos_digitos= entrada+100
print(soma_dos_digitos)

-- EXECUTION TIME:
0.165888
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
91
9273
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
10
1110
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:02:23) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//100
print(primeiro_digito)
soma_dos_digitos=13+1+4+1
print(soma_dos_digitos)

-- OUTPUT:
91
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:02:31) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//100
print(primeiro_digito)
soma_dos_digitos=3+1+4+1
print(soma_dos_digitos)

-- OUTPUT:
91
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:02:39) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//100
print(primeiro_digito)
soma_dos_digitos=3+1+4+1
print(soma_dos_digitos)

-- EXECUTION TIME:
0.162091
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
91
9
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
10
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:04:40) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
resto=3141//1000
divisao= 3141%1000


-- OUTPUT:
91
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:05:07) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
resto=3141//1000
divisao= 3141%1000
print(soma_dos_digitos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(soma_dos_digitos)
NameError: name 'soma_dos_digitos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:05:39) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
resto=3141//1000
divisao= 3141%1000
print("soma_dos_digitos:")


-- OUTPUT:
soma_dos_digitos:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:06:04) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
resto=3141//1000
divisao= 3141%1000
print("soma_dos_digitos:")


-- OUTPUT:
soma_dos_digitos:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:19:03) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
print(primeiro_digito)
nro=entrada%1000
print(int(nro//100))


-- OUTPUT:
9
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:19:14) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
print(primeiro_digito)
nro=entrada%1000
print(int(nro//100))


-- EXECUTION TIME:
0.201541
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
9
1
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
1
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:19:26) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
print(primeiro_digito)
nro=entrada%1000
print(int(nro//100))


-- OUTPUT:
9
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:19:57) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
nro=entrada%1000
print(int(nro//100))


-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:20:07) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
nro=entrada%1000
print(int(nro//100))


-- EXECUTION TIME:
0.1548
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
1
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:20:08) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
nro=entrada%1000
print(int(nro//100))


-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:21:39) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
nro=entrada%1000
print(int(nro//100))
print(soma_dos_digitos)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(soma_dos_digitos)
NameError: name 'soma_dos_digitos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:22:05) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
nro=entrada%1000
print(int(nro//100))
print("soma_dos_digitos:")


-- OUTPUT:
1
soma_dos_digitos:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:22:12) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
nro=entrada%1000
print(int(nro//100))
print("soma_dos_digitos:")


-- EXECUTION TIME:
0.243406
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
1
soma_dos_digitos:
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
0
soma_dos_digitos:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:22:13) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
nro=entrada%1000
print(int(nro//100))
print("soma_dos_digitos:")


-- OUTPUT:
1
soma_dos_digitos:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:23:30) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
print(primeiro_digito)
segundo_digito=entrada%1000
print(segundo_digito)
print(int(nro//100))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(int(nro//100))
NameError: name 'nro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:23:34) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
print(primeiro_digito)
segundo_digito=entrada%1000
print(segundo_digito)
print(int(nro//100))



-- EXECUTION TIME:
0.17389
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 6, in <module>
    print(int(nro//100))
NameError: name 'nro' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:23:36) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
print(primeiro_digito)
segundo_digito=entrada%1000
print(segundo_digito)
print(int(nro//100))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(int(nro//100))
NameError: name 'nro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:25:09) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
print(primeiro_digito)
nro=entrada%1000
print(int(nro//100))



-- OUTPUT:
9
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:25:15) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
print(primeiro_digito)
nro=entrada%1000
print(int(nro//100))



-- EXECUTION TIME:
0.198344
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
9
1
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
1
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:25:17) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
print(primeiro_digito)
nro=entrada%1000
print(int(nro//100))



-- OUTPUT:
9
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:47:20) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
print(primeiro_digito)
segundo_digito=entrada%1000
print(segundo_digito)
terceiro_digito=entrada%100
print(terceiro_digito)
quarto_digito=entrada%10
print(quarto_digito)
print(int(nro//100))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(int(nro//100))
NameError: name 'nro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:47:28) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
print(primeiro_digito)
segundo_digito=entrada%1000
print(segundo_digito)
terceiro_digito=entrada%100
print(terceiro_digito)
quarto_digito=entrada%10
print(quarto_digito)




-- OUTPUT:
9
173
73
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:47:34) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
print(primeiro_digito)
segundo_digito=entrada%1000
print(segundo_digito)
terceiro_digito=entrada%100
print(terceiro_digito)
quarto_digito=entrada%10
print(quarto_digito)




-- EXECUTION TIME:
0.140455
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
9
173
73
3
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
1
10
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:47:54) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
print(primeiro_digito)
segundo_digito=entrada%1000
print(segundo_digito)
terceiro_digito=entrada%100
print(terceiro_digito)
quarto_digito=entrada%10
print(quarto_digito)
print(soma_dos_digitos)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(soma_dos_digitos)
NameError: name 'soma_dos_digitos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:48:16) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
print(primeiro_digito)
segundo_digito=entrada%1000
print(segundo_digito)
terceiro_digito=entrada%100
print(terceiro_digito)
quarto_digito=entrada%10
print(quarto_digito)
print(soma_dos_digitos)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(soma_dos_digitos)
NameError: name 'soma_dos_digitos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:49:55) 
-- CODE:
entrada=int(input("numero de quatro digitos:"))
primeiro_digito=entrada//1000
print(primeiro_digito)
segundo_digito=entrada%1000
print(segundo_digito)
terceiro_digito=entrada%100
print(terceiro_digito)
quarto_digito=entrada%10
print(quarto_digito)
print(soma_dos_quatro_digitos)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(soma_dos_quatro_digitos)
NameError: name 'soma_dos_quatro_digitos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:06:17) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num%1000)//100
c = (num%1000)%100//10
d = (num%1000)%100%10
print(a+b+c+d)




-- EXECUTION TIME:
0.168581
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
